--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,149 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@800&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background: #170628;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+header {
+  background: transparent;
+  width: 100%;
+  padding: 2em 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrapper {
+  margin: 0 auto;
+  width: 60%;
   display: flex;
+  justify-content: space-between;
+}
+
+.logo {
+  display: flex;
+}
+
+.logo h4 {
+  margin-left: 1em;
+  font-size: 1.25rem;
+  font-family: 'Cairo', sans-serif;
+  color: #fff;
+}
+
+.logo img {
+  width: 3em;
+}
+
+.btn-info {
+  padding: 1em 4em;
+  background: orange;
+  border-radius: 25px;
+  color: #fff;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+}
+
+main {
+  margin: 2em auto 0 auto;
+  width: 60%;
+  color: #fff;
+}
+
+main h2 {
+  font-size: 1.5rem;
+  margin-bottom: 2em;
+}
+
+.channel-list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  row-gap: 1.5em;
+}
+
+.channel {
+  position: relative;
+  border-radius: 5px;
+  max-width: 13vw;
+  height: 15vh;
+  text-align: center;
+  cursor: pointer;
+}
+
+.info {
+  display: none;
+  position: absolute;
+  padding: 1em;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  border-radius: 5px;
+  background: rgba(0, 0, 0, .8);
+  z-index: 1;
 }
 
-.App-link {
-  color: #61dafb;
+.name {
+  font-size: 2rem;
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.country {
+  font-weight: bold;
+  margin-bottom: 2em;
+}
+
+.channel:hover .info {
+  display: flex;
+}
+
+.background {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+}
+
+.background-image {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.video-max {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.info-page {
+  margin: 4em auto 0 auto;
+  width: 60%;
+}
+
+.info-page p {
+  margin-top: 2em;
+}
+
+.info-page p:last-child {
+  margin-top: 5em;
+}
+
+.info-page img {
+  margin-right: 1em;
+  width: 2em;
 }
