--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@800&display=swap');
 
+:root {
+  --background: #1d1724;
+  --channel-border-radius: .5em;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: #fff;
 }
 
 body {
-  background: #170628;
+  background: var(--background);
+  color: #fff;
+  padding-bottom: 5em;
 }
 
 header {
@@ -17,11 +23,9 @@ header {
   padding: 2em 0;
 }
 
-.wrapper {
+nav {
   margin: 0 auto;
   width: 60%;
-  display: flex;
-  justify-content: space-between;
 }
 
 .logo {
@@ -30,23 +34,14 @@ header {
 
 .logo h4 {
   margin-left: 1em;
-  font-size: 1.25rem;
+  font-size: 1rem;
   font-family: 'Cairo', sans-serif;
+  font-weight: 400;
   color: #fff;
 }
 
 .logo img {
   width: 3em;
-}
-
-.btn-info {
-  padding: 1em 4em;
-  background: orange;
-  border-radius: 25px;
-  color: #fff;
-  font-weight: bold;
-  border: none;
-  cursor: pointer;
 }
 
 main {
@@ -57,25 +52,39 @@ main {
 
 main h2 {
   font-size: 1.5rem;
-  margin-bottom: 2em;
+  font-weight: 400;
 }
 
-.channel-list {
+.channels-list {
+  margin-top: 2em;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  column-gap: 1.5em;
   row-gap: 1.5em;
+  justify-content: space-between;
 }
 
 .channel {
   position: relative;
-  border-radius: 5px;
-  max-width: 13vw;
-  height: 15vh;
+  border-radius: var(--channel-border-radius);
+  height: 10em;
   text-align: center;
   cursor: pointer;
 }
 
-.info {
+.channel-background {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.background-image {
+  width: 100%;
+  height: 100%;
+  border-radius: var(--channel-border-radius);
+}
+
+.channel-info {
   display: none;
   position: absolute;
   padding: 1em;
@@ -84,37 +93,24 @@ main h2 {
   width: 100%;
   height: 100%;
   flex-direction: column;
-  justify-content: space-between;
-  border-radius: 5px;
-  background: rgba(0, 0, 0, .8);
+  border-radius: var(--channel-border-radius);
+  background: rgba(0, 0, 0, .9);
   z-index: 1;
 }
 
-.name {
-  font-size: 2rem;
-  font-weight: bold;
-}
-
-.country {
-  font-weight: bold;
-  margin-bottom: 2em;
-}
-
-.channel:hover .info {
+.channel:hover .channel-info {
   display: flex;
 }
 
-.background {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  border-radius: 5px;
+.channel-name {
+  margin-top: 1em;
+  font-size: 1.3rem;
+  font-weight: 500;
 }
 
-.background-image {
-  width: 100%;
-  height: 100%;
-  border-radius: 5px;
+.channel-country {
+  margin-top: .5em;
+  font-size: 1rem;
 }
 
 a {
@@ -122,7 +118,7 @@ a {
   text-decoration: none;
 }
 
-.video-max {
+.video {
   position: absolute;
   top: 0;
   left: 0;
@@ -146,4 +142,47 @@ a {
 .info-page img {
   margin-right: 1em;
   width: 2em;
+}
+
+.channels-list-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.filter-options select {
+  margin-left: 4px;
+  padding: 3px;
+  outline: none;
+}
+
+.filter-options {
+  display: flex;
+}
+
+@media only screen and (max-width: 968px) {
+  header {
+    padding: 1em;
+  }
+
+  nav {
+    width: 95%;
+  }
+
+  main {
+    width: 95%;
+  }
+
+  main h2 {
+    font-size: 1.3rem;
+  }
+
+  .channels-list {
+    column-gap: 1em;
+    row-gap: 1em;
+  }
+
+  .channel {
+    height: 6em;
+  }
 }
